overflow trouble fixed

--- a/fansite.css
+++ b/fansite.css
@@ -82,7 +82,7 @@ h5 {
 
 /*  RESPONSIVE <3 */
 
-@media (min-width: 430px) {
+@media (min-width: 760px) {
 
      /* ~ PARALLAX ~ */
     .parallax {
@@ -163,8 +163,8 @@ h5 {
         display: flex;
         flex-direction: column;
         width: 35% !important;
-        margin-right: auto;
         margin-left: 30px; 
+        margin-right: auto;
         position: relative;
         background: rgb(98,150,148);
     
@@ -179,6 +179,10 @@ h5 {
         margin-left: auto;
         overflow: hidden;
     
+    }
+
+    .container_pic > img { 
+        max-width: 500px;
     }
 
     .container_content_actualite {
@@ -748,7 +752,7 @@ input[type=submit]:hover {
 
 .container_contexte { 
     display: flex;
-    width: 400px;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
     justify-content: center;
@@ -811,7 +815,7 @@ input[type=submit]:hover {
 }
 
 .container_pic > img { 
-    max-width: 500px;
+    max-width: 100%;
 }
 
 .container_newsletter { 
@@ -989,7 +993,6 @@ details[open] > p {
     flex-direction: column;
     width: 100%;
     margin-right: auto;
-    margin-left: 30px; 
     position: relative;
     background: rgb(98,150,148);
 
@@ -1021,7 +1024,6 @@ details[open] > p {
     display: flex;
     flex-direction: column;
     width: 100%;
-    margin-left: 30px;
     margin-right: 30px;
     position: relative;   
 
